--- a/davaleba-omedia/scss/base.scss
+++ b/davaleba-omedia/scss/base.scss
@@ -162,8 +162,22 @@ a {
 		padding: 7px 12px;
 		transition: 0.3s;
 	}
+	&.news {
+		@include mobile {
+			padding: 12px 27px;
+		}
+		padding: 14px 24px;
+	}
 }
-
+.lang-drop {
+	height: 35px;
+	padding: 0 12px;
+	background-color: #F2F3F5;
+	border: 1px solid #E6E7EB;
+	border-radius: 24px;
+	display: flex;
+	align-items: center;
+}
 .scroll__overlay {
 	position: absolute;
 	bottom: 0;
