--- a/davaleba-omedia/scss/page/responsive.scss
+++ b/davaleba-omedia/scss/page/responsive.scss
@@ -19,6 +19,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .f-16 {
+        font-size: 14px !important;
+    }
     .f-14 {
         font-size: 12px !important;
     }
