--- a/davaleba-omedia/scss/page/main.scss
+++ b/davaleba-omedia/scss/page/main.scss
@@ -207,7 +207,7 @@
     }
 
     &.carousel-item {
-        // background-image: url(./../img/image-2.svg);
+        background-image: url(./../img/image-22.svg);
         background-position: center;
         background-repeat: no-repeat;
         min-height: 230px;
